--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
     <groupId>org.example</groupId>
     <artifactId>ventasOnlineMaven</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <repositories>
+
+        <repository>
+            <id>objectdb</id>
+            <name>ObjectDB Repository</name>
+            <url>https://m2.objectdb.com</url>
+        </repository>
+
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -19,6 +30,21 @@
             <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.objectdb</groupId>
+            <artifactId>objectdb</artifactId>
+            <version>2.8.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>1.1</version>
         </dependency>
     </dependencies>
 
